Optimized the first part to solve some problems

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,21 @@
     "    def _get_main_chain_atoms(self):\n",
     "        \"\"\"提取每个残基的主链原子坐标 (N, CA, C, O)\"\"\"\n",
     "        main_chain_atoms = []\n",
+    "        previous_res_id = None\n",
     "        for model in self.structure:\n",
     "            for chain in model:\n",
     "                for residue in chain:\n",
     "                    if is_aa(residue) and residue.has_id('N') and residue.has_id('CA') and residue.has_id('C') and residue.has_id('O'):\n",
+    "                        res_id = residue.get_id()[1]\n",
+    "                        chain_id = chain.get_id()\n",
+    "                        if previous_res_id is not None and abs(res_id - previous_res_id) > 1:\n",
+    "                            print(f\"Non-continuous residue IDs: previous_res_id={previous_res_id}, current_res_id={res_id}, chain={chain_id}\")    \n",
+    "                        previous_res_id = res_id\n",
+    "\n",
     "                        main_chain_atoms.append({\n",
     "                            'residue': residue.get_resname(),\n",
-    "                            'res_id': residue.get_id()[1],\n",
-    "                            'chain': chain.get_id(),\n",
+    "                            'res_id': res_id,\n",
+    "                            'chain': chain_id,\n",
     "                            'N': residue['N'].get_coord(),\n",
     "                            'CA': residue['CA'].get_coord(),\n",
     "                            'C': residue['C'].get_coord(),\n",
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +92,7 @@
     "    def __init__(self, main_chain_atoms):\n",
     "        self.main_chain_atoms = main_chain_atoms\n",
     "    \n",
-    "    def calculate_hydrogen_bonds(self, energy_threshold=-0.5):\n",
+    "    def calculate_hydrogen_bonds(self, energy_threshold= -0.5):\n",
     "        hbonds = []\n",
     "        num_residues = len(self.main_chain_atoms)\n",
     "        \n",
@@ -99,13 +106,13 @@
     "                acceptor_residue_id = acceptor_residue['res_id']\n",
     "                \n",
     "                if donor_chain_id != acceptor_chain_id:\n",
-    "                    print(f\"跨链氢键跳过: donor_chain_id={donor_chain_id}, acceptor_chain_id={acceptor_chain_id}\")\n",
+    "                    #print(f\"跨链氢键跳过: donor_chain_id={donor_chain_id}, acceptor_chain_id={acceptor_chain_id}\")\n",
     "                    continue\n",
     "\n",
     "                diff = abs(donor_residue_id - acceptor_residue_id)\n",
     "\n",
-    "                if diff > 180:  \n",
-    "                    print(f\"远距离氢键跳过: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={diff}\")\n",
+    "                if diff > 220:  \n",
+    "                    #print(f\"远距离氢键跳过: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={diff}\")\n",
     "                    continue\n",
     "\n",
     "                # Calculate hydrogen bond energy\n",
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,22 +202,20 @@
     "        res_id_to_index = {res['res_id']: idx for idx, res in enumerate(self.main_chain_atoms)}\n",
     "\n",
     "        for bond in self.hbonds:\n",
-    "            donor = bond['donor']\n",
-    "            acceptor = bond['acceptor']\n",
     "\n",
-    "            donor_residue_id = donor['res_id']\n",
-    "            acceptor_residue_id = acceptor['res_id']\n",
+    "            donor_residue_id = bond['donor']['res_id']\n",
+    "            acceptor_residue_id = bond['acceptor']['res_id']\n",
     "            diff = abs(donor_residue_id - acceptor_residue_id)\n",
     "\n",
-    "            print(f\"Processing bond: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={abs(donor_residue_id - acceptor_residue_id)}\")\n",
+    "            print(f\"Processing bond: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={abs(donor_residue_id - acceptor_residue_id)}, energy = {bond['energy']}\")\n",
     "\n",
     "            # 优化后的螺旋判定条件，增加对氢键能量和角度的筛选\n",
-    "            if diff in [3, 4, 5] and bond['energy'] < -0.4 and 150 <= abs(bond['angle'] * 180 / np.pi) <= 180:\n",
+    "            if diff in [3,4,5]:\n",
     "                helix.add(donor_residue_id)\n",
     "                helix.add(acceptor_residue_id)\n",
     "\n",
     "            # β 折叠判定条件\n",
-    "            elif 5 < diff <= 120 and bond['r_ON'] < 4.1:\n",
+    "            elif 5 < diff <= 200 and bond['r_ON'] < 4.1 and bond['energy'] < -0.4:\n",
     "                beta.add(donor_residue_id)\n",
     "                beta.add(acceptor_residue_id)\n",
     "\n",
@@ -221,12 +226,14 @@
     "        for res_id in helix:\n",
     "            if res_id in res_id_to_index:\n",
     "                index = res_id_to_index[res_id]\n",
-    "                secondary_structure[index] = 'H'\n",
+    "                secondary_structure[index] = 'H'  # 先标记为螺旋\n",
     "\n",
     "        for res_id in beta:\n",
     "            if res_id in res_id_to_index:\n",
     "                index = res_id_to_index[res_id]\n",
-    "                secondary_structure[index] = 'E'\n",
+    "                # 只有当残基没有被标记为螺旋时才标记为折叠\n",
+    "                if secondary_structure[index] != 'H':\n",
+    "                    secondary_structure[index] = 'E'\n",
     "\n",
     "        # 调试信息：打印主链原子数量和分配结果\n",
     "        print(\"Length of main_chain_atoms:\", len(self.main_chain_atoms))\n",
@@ -234,6 +241,7 @@
     "        print(\"Beta indices:\", beta)\n",
     "\n",
     "        return secondary_structure\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,17 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing bond: donor_residue_id=50, acceptor_residue_id=51, diff=1\n",
-      "Processing bond: donor_residue_id=58, acceptor_residue_id=117, diff=59\n",
-      "Processing bond: donor_residue_id=58, acceptor_residue_id=119, diff=61\n",
-      "Processing bond: donor_residue_id=84, acceptor_residue_id=85, diff=1\n",
+      "Processing bond: donor_residue_id=50, acceptor_residue_id=51, diff=1, energy = -4.551716327667236\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=117, diff=59, energy = -3.018749475479126\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=119, diff=61, energy = -3.2664287090301514\n",
+      "Processing bond: donor_residue_id=84, acceptor_residue_id=85, diff=1, energy = -4.673627853393555\n",
       "Length of main_chain_atoms: 125\n",
       "Helix indices: set()\n",
       "Beta indices: {58, 117, 119}\n"
@@ -386,7 +394,7 @@
     "# Ensure hb_detector is properly instantiated\n",
     "\n",
     "# 1. Parse the PDB structure and extract main chain atoms\n",
-    "pdb_structure = ReadPdbStructure('4QR3.pdb')  # Assuming pdb_filename is defined\n",
+    "pdb_structure = ReadPdbStructure(\"./data/4QR3.pdb\")  # Assuming pdb_filename is defined\n",
     "main_chain_atoms = pdb_structure.get_main_chain_atoms()\n",
     "\n",
     "# 2. Detect hydrogen bonds\n",
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -409,10 +417,10 @@
      "text": [
       "Number of main chain atoms extracted: 125\n",
       "Number of hydrogen bonds detected: 4\n",
-      "Processing bond: donor_residue_id=50, acceptor_residue_id=51, diff=1\n",
-      "Processing bond: donor_residue_id=58, acceptor_residue_id=117, diff=59\n",
-      "Processing bond: donor_residue_id=58, acceptor_residue_id=119, diff=61\n",
-      "Processing bond: donor_residue_id=84, acceptor_residue_id=85, diff=1\n",
+      "Processing bond: donor_residue_id=50, acceptor_residue_id=51, diff=1, energy = -4.551716327667236\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=117, diff=59, energy = -3.018749475479126\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=119, diff=61, energy = -3.2664287090301514\n",
+      "Processing bond: donor_residue_id=84, acceptor_residue_id=85, diff=1, energy = -4.673627853393555\n",
       "Length of main_chain_atoms: 125\n",
       "Helix indices: set()\n",
       "Beta indices: {58, 117, 119}\n",
@@ -428,7 +436,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    pdb_filename =  '4QR3.pdb'  # Replace with your actual PDB file path\n",
+    "    pdb_filename =  \"./data/4QR3.pdb\" # Replace with your actual PDB file path\n",
     "    main(pdb_filename)"
    ]
   },
